ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-bg-ingress
  namespace: flask-bg
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: anthony-bg-demo.sa.cf-cd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rollout-bluegreen-active
          servicePort: 80
